Fix link to js file

--- a/examples/dialog-modal/datepicker-dialog.html
+++ b/examples/dialog-modal/datepicker-dialog.html
@@ -617,7 +617,7 @@
         Javascript:
         <ul>
           <li><a href="js/calendar-button.js" type="text/javascript">calendar-button.js</a></li>
-          <li><a href="js/nonmodal-datepicker.js" type="text/javascript">nonmodal-datepicker.js</a></li>
+          <li><a href="js/datepicker.js" type="text/javascript">datepicker.js</a></li>
           <li><a href="js/datepickerDay.js" type="text/javascript">datepickerDay.js</a></li>
         </ul>
       </li>
