--- a/examples/dialog-modal/datepicker-dialog.html
+++ b/examples/dialog-modal/datepicker-dialog.html
@@ -33,8 +33,8 @@
       The example below includes a date input field and a button that opens a date picker that implements the <a href="../../#dialog-modal">dialog design pattern</a>.
       The dialog contains a calendar that uses the <a href="../../#grid">grid pattern</a> to present buttons that enable the user to choose a day from the calendar.
       Choosing a date from the calendar closes the dialog and populates the date input field.
-      If the input field is empty or does not contain a valid date when the dialog is opened, the current date is focused in the calendar.
-      Otherwise, focus is placed on the day in the calendar that matches the value of the date input field.
+      When the dialog is opened, if the input field is empty, or does not contain a valid date, then the current date is focused in the calendar.
+      Otherwise, the focus is placed on the day in the calendar that matches the value of the date input field.
     </p>
     <p>Similar examples include:</p>
     <ul>
