--- a/examples/dialog-modal/datepicker-dialog.html
+++ b/examples/dialog-modal/datepicker-dialog.html
@@ -198,7 +198,7 @@
         When a date is chosen, the accessible name of the <q>Choose Date</q> button is updated to include the selected date.
         So, when the dialog closes and focus returns to the <q>Choose Date</q> button, screen reader users hear confirmation of the selected date in the button name.
       </li>
-      <li>When the month or year of the calendar grid changes as users navigates the calendar or activates the buttons for next or previous month or year, a live region enables screen readers to announce the new month and year.</li>
+      <li>When the month or year of the calendar grid changes as users navigate the calendar or activate the buttons for next or previous month or year, a live region enables screen readers to announce the new month and year.</li>
       <li>The calendar grid provides hotkeys for changing the year and month as well as support for normal grid navigation keys.</li>
       <li>
         When the dialog opens and a date in the calendar grid receives focus, a live region enables screen readers to announce keyboard instructions for navigating the calendar grid.
