--- a/examples/dialog-modal/datepicker-dialog.html
+++ b/examples/dialog-modal/datepicker-dialog.html
@@ -389,7 +389,7 @@
           </thead>
           <tbody>
             <tr data-test-id="okay-cancel-button-space-return">
-              <th> <kbd>Space</kbd>,<br><kbd>enter</kbd></th>
+              <th> <kbd>Space</kbd>,<br><kbd>Enter</kbd></th>
               <td>
                 Activates the button:
                 <ul>
