remove list with single item

--- a/examples/dialog-modal/datepicker-dialog.html
+++ b/examples/dialog-modal/datepicker-dialog.html
@@ -545,10 +545,7 @@
               <td></td>
               <th scope="row"><code>aria-labelledby=<q>IDREF</q></code></th>
               <td><code>table</code></td>
-              <td>
-                <ul>
-                  <li>Define the accessible name for the <code>grid</code> using the <code>h2</code> that shows the month and year of the dates displayed in the grid.</li>
-                </ul>
+              <td>Define the accessible name for the <code>grid</code> using the <code>h2</code> that shows the month and year of the dates displayed in the grid.
               </td>
             </tr>
             <tr data-test-id="gridcell-button-tabindex">
