Add datepicker based on dialog pattern for issue 1046 (pull #1054)
To resolve issue #1046, adds a modal dialog example that implements a date picker.
The modal dialog includes a calendar grid that implements the grid pattern.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1090,8 +1090,11 @@
       </p>
 
       <section class="notoc">
-        <h4>Example</h4>
-        <p><a href="examples/dialog-modal/dialog.html">Modal Dialog Example</a></p>
+        <h4>Examples</h4>
+        <ul>
+          <li><a href="examples/dialog-modal/dialog.html">Modal Dialog Example</a>: Demonstrates multiple layers of modal dialogs with both small and large amounts of content.</li>
+          <li><a href="examples/dialog-modal/datepicker-dialog.html">Date Picker Dialog Example</a>: Demonstrates a dialog containing a calendar grid for choosing a date.</li>
+        </ul>
       </section>
 
       <section class="notoc">
