Change title to Date Picker Spin Button Example

--- a/examples/spinbutton/datepicker-spinbuttons.html
+++ b/examples/spinbutton/datepicker-spinbuttons.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<title>Date Picker Example Using Spin Buttons | WAI-ARIA Authoring Practices 1.1</title>
+<title>Date Picker Spin Button Example | WAI-ARIA Authoring Practices 1.1</title>
 
 <!--  Core js and css shared by all examples; do not modify when using this template. -->
 <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
@@ -27,7 +27,7 @@
     </ul>
   </nav>
   <main>
-    <h1>Date Picker Example Using Spin Buttons</h1>
+    <h1>Date Picker Spin Button Example</h1>
     <p>
       <strong>NOTE:</strong> This example page is work in progress.
       Please provide feedback in
