Editorial revisions to intro

--- a/examples/spinbutton/datepicker-spinbuttons.html
+++ b/examples/spinbutton/datepicker-spinbuttons.html
@@ -29,8 +29,8 @@
   <main>
     <h1>Date Picker Spin Button Example</h1>
     <p>
-      The date picker is an example of the <a href="../../#spinbutton"><code>Spin Button</code> design pattern</a> to define a date.
-      In this example the year, month and date have separate <code>spin buttons</code>.
+      The following example uses the <a href="../../#spinbutton">Spin Button Design Pattern</a> to implement a date picker.
+      It includes three spin buttons: one for setting the day, a second for month, and a third for year.
     </p>
   <section>
     <h2 id="ex_label">Example</h2>
