Change label from h3 to div and label text to choose a date

--- a/examples/spinbutton/datepicker-spinbuttons.html
+++ b/examples/spinbutton/datepicker-spinbuttons.html
@@ -47,7 +47,7 @@
              role="group"
              aria-labelledby="myDatepickerLabel myDatepickerDate">
   
-             <h3 id="myDatepickerLabel">Date</h3>
+             <div id="myDatepickerLabel">Choose a Date</div>
              <div class="date" hidden id="myDatepickerDate">current value is Friday, June 30th, 2019</div>
   
           <div  class="day spinbutton"
