--- a/examples/spinbutton/datepicker-spinbuttons.html
+++ b/examples/spinbutton/datepicker-spinbuttons.html
@@ -152,175 +152,145 @@
     
     <section>
       <h2 id="kbd_label">Keyboard Support</h2>
-  
-      <section>
-        <h3 id="kbd_label_7">Spin Button (Day, Month and Year)</h3>
-        <p>The spin button for changing the day, month and year provides the following keyboard support described in the <a href="../../#spinbutton">spin button design pattern.</a></p>
-        <table aria-labelledby="kbd_label_7 kbd_label" class="def">
-          <thead>
-            <tr>
-              <th>Key</th>
-              <th>Function</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr data-test-id="spinbutton-down-arrow">
-              <th><kbd>Down Arrow</kbd></th>
-              <td>
-                <ul>
-                  <li>Decreases the spin button value by 1 item.</li>
-                  <li>When on the spin button for day is on the first day of the month, the value is set to the last day.</li>
-                  <li>When on the spin button for month is on <q>January</q>, the value is set to <q>December</q>.</li>
-                </ul>
-              </td>
-            </tr>
-            <tr data-test-id="spinbutton-up-arrow">
-              <th><kbd>Up Arrow</kbd></th>
-              <td>
-                <ul>
-                  <li>Increases the spin button value by 1 item.</li>
-                  <li>When on the spin button for day is on the last day of the month, the value is set to the first day.</li>
-                  <li>When on the spin button for month is on <q>December</q>, the value is set to <q>January</q>.</li>
-                </ul>
-              </td>
-            </tr>
-            <tr data-test-id="spinbutton-page-down">
-              <th><kbd>Page Down</kbd></th>
-              <td>Decreases the spin button value by 5 items.</td>
-            </tr>
-            <tr data-test-id="spinbutton-page-up">
-              <th><kbd>Page Up</kbd></th>
-              <td>Increases the spin button value by 5 items.</td>
-            </tr>
-            <tr data-test-id="spinbutton-end">
-              <th><kbd>End</kbd></th>
-              <td>Set spin button value to maximum value.</td>
-            </tr>
-            <tr data-test-id="spinbutton-home">
-              <th><kbd>Home</kbd></th>
-              <td>Set spin button value to mimimum value.</td>
-            </tr>
-          </tbody>
-        </table>
-      </section>
-  
+      <p>The spin buttons provide the following keyboard support described in the <a href="../../#spinbutton">spin button design pattern.</a></p>
+      <table aria-labelledby="kbd_label" class="def">
+        <thead>
+          <tr>
+            <th>Key</th>
+            <th>Function</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr data-test-id="spinbutton-down-arrow">
+            <th><kbd>Down Arrow</kbd></th>
+            <td>
+              <ul>
+                <li>Decreases value 1 step.</li>
+                <li>When focus is on the <q>Day</q> spin button and the value is the first day of the month, changes value to the last day of the month.</li>
+                <li>When focus is on the <q>Month</q> spin button and the value is <q>January</q>, changes value to <q>December</q>.</li>
+              </ul>
+            </td>
+          </tr>
+          <tr data-test-id="spinbutton-up-arrow">
+            <th><kbd>Up Arrow</kbd></th>
+            <td>
+              <ul>
+                <li>Increases the value 1 step.</li>
+                <li>When focus is on the <q>Day</q> spin button and the value is the lastt day of the month, changes value to the first day of the month.</li>
+                <li>When focus is on the <q>Month</q> spin button and the value is <q>December</q>, changes value to <q>January</q>.</li>
+              </ul>
+            </td>
+          </tr>
+          <tr data-test-id="spinbutton-page-down">
+            <th><kbd>Page Down</kbd></th>
+            <td>Decreases the value 5 steps.</td>
+          </tr>
+          <tr data-test-id="spinbutton-page-up">
+            <th><kbd>Page Up</kbd></th>
+            <td>Increases the value 5 steps.</td>
+          </tr>
+          <tr data-test-id="spinbutton-home">
+            <th><kbd>Home</kbd></th>
+            <td>Decreases to mimimum value.</td>
+          </tr>
+          <tr data-test-id="spinbutton-end">
+            <th><kbd>End</kbd></th>
+            <td>Increases to maximum value.</td>
+          </tr>
+        </tbody>
+      </table>
     </section>
 
     <section>
       <h2 id="rps_label">Role, Property, State, and Tabindex  Attributes</h2>
-  
-      <section>
-        <h3 id="rps_label_1">Group</h3>
-        <p>The grouping role provides a means to identify the selected date to users of assistive technologies and to identify the three spin buttons as part of the same group of controls.</p>
-        <table aria-labelledby="rps_label_1 rps_label" class="data attributes">
-          <thead>
-            <tr>
-              <th scope="col">Role</th>
-              <th scope="col">Attribute</th>
-              <th scope="col">Element</th>
-              <th scope="col">Usage</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr data-test-id="group-role">
-              <th scope="row"><code>group</code></th>
-              <td></td>
-              <td><code>div</code></td>
-              <td>
-                <ul>
-                  <li>Identifies the group of spin buttons for defining a date (e.g. day, month  and year).</li>
-                  <li>The accessible name comes from the <code>aria-labelledby</code> attribute.</li>
-                </ul>
-              </td>
-            </tr>
-            <tr data-test-id="group-aria-labelledby">
-              <td></td>
-              <th scope="row"><code>aria-labelledy="<em>IDREF</em>"</code></th>
-              <td><code>div</code></td>
-              <td>
-                <ul>
-                  <li>The IDREF identifies the element with the visible text defining the accessible name for the group of spin buttons, i.e. "Date".</li>
-                  <li>A hidden <code>div</code> element is used to provides the accessible name content.</li>
-                  <li>The label is updated to contain the selected date represented by the day, month and year spin buttons.</li>
-                </ul>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </section>
-  
-  
-      <section>
-        <h3 id="rps_label_2">Spin Button (Day, Month and Year)</h3>
-        <p>The spin button for changing day, month and year use the following ARIA attributes described in the <a href="../../#spinbutton">spin button design pattern.</a></p>
-        <table aria-labelledby="rps_label_2 rps_label" class="data attributes">
-          <thead>
-            <tr>
-              <th scope="col">Role</th>
-              <th scope="col">Attribute</th>
-              <th scope="col">Element</th>
-              <th scope="col">Usage</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr data-test-id="spinbutton-role">
-              <th scope="row"><code>spinbutton</code></th>
-              <td></td>
-              <td><code>div</code></td>
-              <td>
-                <ul>
-                  <li>Identifies the <code>div</code> element as a <code>spinbutton</code>.</li>
-                  <li>The accessible name comes from the <code>aria-label</code> attribute.</li>
-                </ul>
-              </td>
-            </tr>
-            <tr data-test-id="spinbutton-aria-label">
-              <td></td>
-              <th scope="row"><code>aria-label="<em>name</em>"</code></th>
-              <td><code>div</code></td>
-              <td>Defines the accessible name for each spin button (e.g. <q>day</q>, <q>month</q> and <q>year</q>).</td>
-            </tr>
-            <tr data-test-id="spinbutton-aria-valuenow">
-              <td></td>
-              <th scope="row"><code>aria-valuenow="<em>number</em>"</code></th>
-              <td><code>div</code></td>
-              <td>
-                <ul>
-                  <li>Indicates the current numeric value of the spin button.</li>
-                  <li>Updated by JavaScript as users change the value of the spin button.</li>
-                </ul>
-              </td>
-            </tr>
-            <tr data-test-id="spinbutton-aria-valuetext">
-              <td></td>
-              <th scope="row"><code>aria-valuetext="<em>date</em> or <em>month</em>"</code></th>
-              <td><code>div</code></td>
-              <td>
-                <ul>
-                  <li>For the day spin button value text is provides a more date friendly pronunciation of the date (i.e. "first" instead of "one")</li>
-                  <li>For the month spin button provides a more user friendly announcement of the current month for screen reader users.</li>
-                  <li>As users adjust the value, instead of hearing only a number, they will hear the current month.</li>
-                </ul>
-              </td>
-            </tr>
-            <tr data-test-id="spinbutton-aria-valuemin">
-              <td></td>
-              <th scope="row"><code>aria-valuemin="8"</code></th>
-              <td><code>div</code></td>
-              <td>Indicates the minimum allowed value for the spin button.</td>
-            </tr>
-            <tr data-test-id="spinbutton-aria-valuemax">
-              <td></td>
-              <th scope="row"><code>aria-valuemax="40"</code></th>
-              <td><code>div</code></td>
-              <td>
-                <ul>
-                  <li>Indicates the maximum allowed value for the spin button.</li>
-                  <li>For the spin button for days, the maximum value is updated to reflect the number of days in the current month.</li>
-                </ul>
-              </td>
-            </tr>
-            <tr data-test-id="spinbutton-aria-hidden">
+      <table aria-labelledby="rps_label_1 rps_label" class="data attributes">
+        <thead>
+          <tr>
+            <th scope="col">Role</th>
+            <th scope="col">Attribute</th>
+            <th scope="col">Element</th>
+            <th scope="col">Usage</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr data-test-id="group-role">
+            <th scope="row"><code>group</code></th>
+            <td></td>
+            <td><code>div</code></td>
+            <td>
+              <ul>
+                <li>Identifies the <code>div</code> as a group.</li>
+                <li>The group provides a means to inform assistive technology users that the three spin buttons are all related to the single purpose of choosing a date.</li>
+              </ul>
+            </td>
+          </tr>
+          <tr data-test-id="group-aria-labelledby">
+            <td></td>
+            <th scope="row"><code>aria-labelledby="IDREFs"</code></th>
+            <td><code>div</code></td>
+            <td>
+              <ul>
+                <li>Contains two IDs that reference the <code>div</code> elements that provide the accessible name for the group.</li>
+                <li>One ID refers to the visible label <q>Choose a Date</q>.</li>
+                <li>The second ID refers to a hidden <code>div</code> that contains a string specifying the current date represented by the values of the three spin buttons, which is updated by JavaScript as users change the values of the spin buttons.</li>
+              </ul>
+            </td>
+          </tr>
+          <tr data-test-id="spinbutton-role">
+            <th scope="row"><code>spinbutton</code></th>
+            <td></td>
+            <td><code>div</code></td>
+            <td>Identifies the <code>div</code> element as a <code>spinbutton</code>.</td>
+          </tr>
+          <tr data-test-id="spinbutton-aria-label">
+            <td></td>
+            <th scope="row"><code>aria-label="NAME_STRING"</code></th>
+            <td><code>div</code></td>
+            <td>Defines the accessible name for each spin button (e.g. <q>day</q>, <q>month</q> and <q>year</q>).</td>
+          </tr>
+          <tr data-test-id="spinbutton-aria-valuenow">
+            <td></td>
+            <th scope="row"><code>aria-valuenow="NUMBER"</code></th>
+            <td><code>div</code></td>
+            <td>
+              <ul>
+                <li>Indicates the current numeric value of the spin button.</li>
+                <li>Updated by JavaScript as users change the value of the spin button.</li>
+              </ul>
+            </td>
+          </tr>
+          <tr data-test-id="spinbutton-aria-valuetext">
+            <td></td>
+            <th scope="row">
+              <code>aria-valuetext="DAY_NUMBER_STRING"</code> or<br>
+              <code>aria-valuetext="MONTH_STRING"</code>
+            </th>
+            <td><code>div</code></td>
+            <td>
+              <ul>
+                <li>For the <q>Day</q> spin button, provides screen reader users with a friendlier pronunciation of the number of the day of the month (i.e. <q>first</q> instead of <q>one</q>).</li>
+                <li>For the <q>Month</q> spin button, provides screen reader users with a friendlier announcement of the month (i.e., <q>January</q> instead of <q>one</q>).</li>
+              </ul>
+            </td>
+          </tr>
+          <tr data-test-id="spinbutton-aria-valuemin">
+            <td></td>
+            <th scope="row"><code>aria-valuemin="NUMBER"</code></th>
+            <td><code>div</code></td>
+            <td>Indicates the minimum allowed value for the spin button.</td>
+          </tr>
+          <tr data-test-id="spinbutton-aria-valuemax">
+            <td></td>
+            <th scope="row"><code>aria-valuemax="NUMBER"</code></th>
+            <td><code>div</code></td>
+            <td>
+              <ul>
+                <li>Indicates the maximum allowed value for the spin button.</li>
+                <li>For the <q>Day</q> spin button, this property is updated based on the value of the <q>Month</q> spin button.</li>
+              </ul>
+            </td>
+          </tr>
+          <tr data-test-id="spinbutton-aria-hidden">
               <td></td>
               <th scope="row"><code>aria-hidden="true"</code></th>
               <td>
@@ -329,48 +299,24 @@
                   <li><code>div.previous</code></li>
                 </ul>
               </td>
-              <td>
-                Hides the visible text for the next and previous values from screen readers, since the information would be confusing without any context to screen reader users.  Only the current value needs to be visible to screen readers.
-              </td>
+              <td>For assistive technology users, hides the text showing the next and previous values that is displayed adjacent to the up and down arrow icons since it would otherwise add superfluous elements to the screen reader reading order that are likely to be more confusing than helpful.</td>
             </tr>
-          </tbody>
-        </table>
-      </section>
-  
-      <section>
-        <h3 id="rps_label_3">Increment and Decrement Buttons (Day, Month and Year)</h3>
-  
-        <p>Each spin button has a corresponding increment and decrement buttons for supporting accessibility on touch devices.   The buttons are not part of the tab order of the page or respond to keyboard commands, but still need to be described to assistive technologies.</p>
-        <table aria-labelledby="rps_label_3 rps_label" class="data attributes">
-          <thead>
-            <tr>
-              <th scope="col">Role</th>
-              <th scope="col">Attribute</th>
-              <th scope="col">Element</th>
-              <th scope="col">Usage</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr data-test-id="button-aria-label">
-              <td></td>
-              <th scope="row"><code>aria-label="<em>name</em>"</code></th>
-              <td><code>button</code></td>
-              <td>Defines the accessible name for each increase and descrease button (e.g. <q>next day</q>, <q>previous day</q>, <q>next month</q>, <q>previous month</q>, <q>next year</q> and <q>previous year</q>).</td>
-            </tr>
-            <tr data-test-id="button-tabindex">
-              <td></td>
-              <th scope="row"><code>tabindex="-1"</code></th>
-              <td><code>button</code></td>
-              <td>
-                Setting <code>tabindex="-1</code> takes the decrement and increment buttons out of the tab order of the page, but they can still be accessed though pointer and touch events to change the value of the spin buttons.
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </section>
-  
+          <tr data-test-id="button-aria-label">
+            <td></td>
+            <th scope="row"><code>aria-label="NAME_STRING"</code></th>
+            <td><code>button</code></td>
+            <td>Defines the accessible name for each increase and decrease button (<q>Next Day</q>, <q>Previous Day</q>, <q>Next Month</q>, <q>Previous Month</q>, <q>Next year</q>, and <q>Previous Year</q>).</td>
+          </tr>
+          <tr data-test-id="button-tabindex">
+            <td></td>
+            <th scope="row"><code>tabindex="-1"</code></th>
+            <td><code>button</code></td>
+            <td>Removes the decrement and increment buttons from the page <kbd>Tab</kbd> sequence while keeping them focusable so they can be accessed with touch-based assistive technologies.</td>
+          </tr>
+        </tbody>
+      </table>
     </section>
-
+  
     <section>
       <h2>Javascript and CSS Source Code</h2>
       <ul>
