Correct link in bottom nav to point to spin button design pattern

--- a/examples/spinbutton/datepicker-spinbuttons.html
+++ b/examples/spinbutton/datepicker-spinbuttons.html
@@ -346,7 +346,7 @@
     </section>
   </main>
   <nav>
-    <a href="../../#datepicker">Date Picker Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
+    <a href="../../#spinbutton">Spin Button Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
   </nav>
 </body>
 </html>
