Add note to cell and gridcell guidance explaining that an empty name represents and empty cell

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4251,7 +4251,8 @@ So, As advised by <a href="#naming_rule_avoid_fallback">Rule 4: Avoid Browser Fa
                 <ul>
                   <li>Warning! Using <code>aria-label</code> or <code>aria-labelledby</code> will hide descendant content from assistive technologies.</li>
                   <li>Ideally named by visible, descendant content.</li>
-                  <li>Note that associated row or column headers do not name a cell; a cell's name is its content. Headers are complementary information.</li>
+                  <li>Note that a name is not required; assistive technologies expect an empty cell in a table to be represented by an empty name.</li>
+                  <li>Note that associated row or column headers do not name a <code>cell</code>; the name of a cell in a table is its content. Headers are complementary information.</li>
                 </ul>
               </td>
             </tr>
@@ -4389,7 +4390,8 @@ So, As advised by <a href="#naming_rule_avoid_fallback">Rule 4: Avoid Browser Fa
                 <ul>
                   <li>Warning! Using <code>aria-label</code> or <code>aria-labelledby</code> will hide descendant content from assistive technologies.</li>
                   <li>Ideally named by visible, descendant content.</li>
-                  <li>Note that associated row or column headers do not name a cell; a cell's name is its content. Headers are complementary information.</li>
+                  <li>Note that a name is not required; assistive technologies expect an empty cell in a grid to be represented by an empty name.</li>
+                  <li>Note that associated row or column headers do not name a <code>gridcell</code>; the name of a cell in a grid is its content. Headers are complementary information.</li>
                 </ul>
               </td>
             </tr>
