Add thead and tbody elements to name guidance by role table

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4189,12 +4189,15 @@ So, As advised by <a href="#naming_rule_avoid_fallback">Rule 4: Avoid Browser Fa
           </dd>
         </dl>
         <table aria-labelledby="naming_role_guidance_heading">
-          <tr>
-            <th>role</th>
-            <th>Necessity of Naming</th>
-            <th>Guidance</th>
-          </tr>
-          <tr>
+          <thead>
+            <tr>
+              <th>role</th>
+              <th>Necessity of Naming</th>
+              <th>Guidance</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
               <td><a href="#alert" class="role-reference"><code>alert</code></a></td>
               <td>Discretionary</td>
               <td>
@@ -4874,6 +4877,7 @@ So, As advised by <a href="#naming_rule_avoid_fallback">Rule 4: Avoid Browser Fa
                 </ul>
               </td>
             </tr>
+          </tbody>
         </table>
       </section>
 
