--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4189,12 +4189,15 @@ So, As advised by <a href="#naming_rule_avoid_fallback">Rule 4: Avoid Browser Fa
           </dd>
         </dl>
         <table aria-labelledby="naming_role_guidance_heading">
-          <tr>
-            <th>role</th>
-            <th>Necessity of Naming</th>
-            <th>Guidance</th>
-          </tr>
-          <tr>
+          <thead>
+            <tr>
+              <th>role</th>
+              <th>Necessity of Naming</th>
+              <th>Guidance</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
               <td><a href="#alert" class="role-reference"><code>alert</code></a></td>
               <td>Discretionary</td>
               <td>
@@ -4251,7 +4254,8 @@ So, As advised by <a href="#naming_rule_avoid_fallback">Rule 4: Avoid Browser Fa
                 <ul>
                   <li>Warning! Using <code>aria-label</code> or <code>aria-labelledby</code> will hide descendant content from assistive technologies.</li>
                   <li>Ideally named by visible, descendant content.</li>
-                  <li>Note that associated row or column headers do not name a cell; a cell's name is its content. Headers are complementary information.</li>
+                  <li>Note that a name is not required; assistive technologies expect an empty cell in a table to be represented by an empty name.</li>
+                  <li>Note that associated row or column headers do not name a <code>cell</code>; the name of a cell in a table is its content. Headers are complementary information.</li>
                 </ul>
               </td>
             </tr>
@@ -4389,7 +4393,8 @@ So, As advised by <a href="#naming_rule_avoid_fallback">Rule 4: Avoid Browser Fa
                 <ul>
                   <li>Warning! Using <code>aria-label</code> or <code>aria-labelledby</code> will hide descendant content from assistive technologies.</li>
                   <li>Ideally named by visible, descendant content.</li>
-                  <li>Note that associated row or column headers do not name a cell; a cell's name is its content. Headers are complementary information.</li>
+                  <li>Note that a name is not required; assistive technologies expect an empty cell in a grid to be represented by an empty name.</li>
+                  <li>Note that associated row or column headers do not name a <code>gridcell</code>; the name of a cell in a grid is its content. Headers are complementary information.</li>
                 </ul>
               </td>
             </tr>
@@ -4872,6 +4877,7 @@ So, As advised by <a href="#naming_rule_avoid_fallback">Rule 4: Avoid Browser Fa
                 </ul>
               </td>
             </tr>
+          </tbody>
         </table>
       </section>
 
