added missing roles to reference table script'

--- a/examples/index.html
+++ b/examples/index.html
@@ -36,6 +36,14 @@
         </thead>
         <tbody id="examples_by_role_tbody">
           <tr>
+            <td><code>alert</code></td>
+            <td><a href="alert/alert.html">Alert</a></td>
+          </tr>
+          <tr>
+            <td><code>alertdialog</code></td>
+            <td><a href="dialog-modal/alertdialog.html">Alert Dialog</a></td>
+          </tr>
+          <tr>
             <td><code>article</code></td>
             <td><a href="feed/feed.html">Feed</a></td>
           </tr>
@@ -79,6 +87,15 @@
           <tr>
             <td><code>contentinfo</code></td>
             <td><a href="landmarks/contentinfo.html">Contentinfo Landmark</a></td>
+          </tr>
+          <tr>
+            <td><code>dialog</code></td>
+            <td>
+              <ul>
+                <li><a href="dialog-modal/datepicker-dialog.html">Date Picker Dialog</a></li>
+                <li><a href="dialog-modal/dialog.html">Modal Dialog</a></li>
+              </ul>
+            </td>
           </tr>
           <tr>
             <td><code>feed</code></td>
