fix: Comment out region from array

--- a/examples/index.html
+++ b/examples/index.html
@@ -247,13 +247,7 @@
           </tr>
           <tr>
             <td><code>region</code></td>
-            <td>
-              <ul>
-                <li><a href="accordion/accordion.html">Accordion</a></li>
-                <li><a href="carousel/carousel-1.html">Auto-Rotating Image Carousel</a></li>
-                <li><a href="landmarks/region.html">Region Landmark</a></li>
-              </ul>
-            </td>
+            <td><a href="landmarks/region.html">Region Landmark</a></td>
           </tr>
           <tr>
             <td><code>row</code></td>
