--- a/examples/combobox/aria1.1pattern/combo-11-datepicker.html
+++ b/examples/combobox/aria1.1pattern/combo-11-datepicker.html
@@ -28,7 +28,7 @@
     </ul>
   </nav>
   <main>
-    <h1>Date Picker Example Using ARIA 1.1 Combobox (test)</h1>
+    <h1>Date Picker Example Using ARIA 1.1 Combobox</h1>
     <p>
       <strong>NOTE:</strong> This example page is work in progress.
       Please provide feedback in
